# 02-swarm-02-swarm

./: .clang-format  .gitignore  CMakeLists.txt  DifferentialEvolution  DifferentialEvolution.md  FireFlyBFGS.md  FireFly_BFGS.md  FireflyBFGS.md  GeneticAlgorithm.md  README.md  SimulatedAnnealing.md  StochasticTunnelling.md  SwarmSearch.md  makefile  test.code-workspace
bench/: bench_de_omp.cpp  bench_fireFly_BFGS.cpp  bench_genetic.cpp  bench_genetic_omp.cpp  bench_sa_omp.cpp  bench_swarm_search.cpp  bench_tunnelling_omp.cpp  benchmark_test.cpp
benchResult/: deBenchResults.csv  outSA.csv  plot_benchmark.py  plot_benchsa.py
doc/: report.tex
example/: CMakeLists.txt  example.cpp
exec/: TestRastrigin.cpp  TestRosenbrock.cpp  main.cpp  test.cpp
include/: Algorithm.hpp  BFGSOptimizer.h  Candidate.hpp  Creature.hpp  DifferentialEvolution.hpp  DistributedDifferentialEvolution.hpp  DistributedGeneticAlgorithm.hpp  DistributedMultiStochasticTunnelling.hpp  DistributedSimulatedAnnealing.hpp  EuclideanDistance.hpp  Firefly.h  FireflyAlgorithm.h  FireflyAlgorithm_Cuda.h  GeneticAlgorithm.hpp  MultiStochasticTunnelling.hpp  ObjectiveFunction.hpp  Particle.hpp  Position.hpp  Rastrigin.hpp  Rosenbrock.hpp  SimulatedAnnealing.hpp  Sphere.hpp  State.hpp  StochasticTunnelling.hpp  Swarm.hpp
src/: Algorithm.cpp  BFGSOptimizer.cpp  Candidate.cpp  Creature.cpp  DifferentialEvolution.cpp  DistributedDifferentialEvolution.cpp  DistributedGeneticAlgorithm.cpp  DistributedMultiStochasticTunnelling.cpp  DistributedSimulatedAnnealing.cpp  EuclideanDistance.cpp  Firefly.cpp  FireflyAlgorithm.cpp  FireflyAlgorithm_Cuda.cpp  FireflyKernel.cu  GeneticAlgorithm.cpp  MultiStochasticTunnelling.cpp  ObjectiveFunction.cpp  Particle.cpp  Position.cpp  Rastrigin.cpp  Rosenbrock.cpp  SimulatedAnnealing.cpp  Sphere.cpp  State.cpp  StochasticTunnelling.cpp  Swarm.cpp  main.cpp
test/: TestRastrigin.cpp  TestRosenbrock.cpp  main_test_de_mpi.cpp  test_de_convergence.cpp  test_de_convergence_mpi.cpp  test_firefly_bfgs.cpp  test_function_convergence.cpp  test_genetic_convergence.cpp  test_genetic_convergence_mpi.cpp  test_genetic_convergence_omp.cpp  test_multi_tunnelling_convergence.cpp  test_multi_tunnelling_convergence_mpi.cpp  test_sa_convergence.cpp  test_sa_convergence_mpi.cpp  test_swarm_convergence.cpp  test_tunnelling_convergence.cpp
